--- a/index.html
+++ b/index.html
@@ -240,6 +240,128 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person1.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>Gina Carano</h3>
+              <h5 class="text-muted">Front End Developer</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fab fa-facebook fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fab fa-twitter fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fab fa-instagram fa-2x"></i>
+                  </a>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person2.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>Kaitlyn Dever</h3>
+              <h5 class="text-muted">Back End Developer</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fab fa-facebook fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fab fa-twitter fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fab fa-instagram fa-2x"></i>
+                  </a>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person3.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>Chris Pratt</h3>
+              <h5 class="text-muted">Full Stack Developer</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fab fa-facebook fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fab fa-twitter fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fab fa-instagram fa-2x"></i>
+                  </a>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person4.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>Bradley Cooper</h3>
+              <h5 class="text-muted">Web Designer</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fab fa-facebook fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fab fa-twitter fa-2x"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fab fa-instagram fa-2x"></i>
+                  </a>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
