modified font awesome icons colors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-  <link rel="icon" href="img/logo.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="img/logo.png" alt="favicon" type="image/png" sizes="16x16">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <title> CyberPunk</title>
@@ -18,7 +18,7 @@
     <div class="container">
       <a href="#home" class="navbar-brand">
         <img src="img/logo.png" width="40" height="40" alt="logo" class="mr-2 img-fluid">
-        <h3 class="d-inline">CyberPunk</h3>
+        <h3 class="d-inline" id="logo">CyberPunk</h3>
       </a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,8 @@
 
 
         <div class="col-lg-6 p-5">
-          <img src="img/showcase-poster.png" width="300" height="400" class="img-fluid d-none d-lg-block">
+          <img src="img/showcase-poster.png" alt="hero-poster" width="300" height="400"
+            class="img-fluid d-none d-lg-block">
         </div>
       </div>
 
@@ -96,7 +97,7 @@
 
 
   <section id="boxes" class="py-5">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-4">
           <div class="card text-center border-primary mb-resp">
@@ -138,7 +139,7 @@
                 like White Hats
                 in that, but these folks are SCARY to those who have ever tried so much
                 as PenTest. Instead of reporting the malicious hacker
-                DoSing and accessing his computer to destroy it from the inside out. </p>
+                DoSing his computer to destroy it from the inside out. </p>
             </div>
           </div>
         </div>
@@ -231,7 +232,7 @@
   </section>
 
 
-  <!-- CyberThreat -->
+  <!-- Author section -->
 
   <section id="cyberthreat" class="my-5 text-center">
     <div class="container">
@@ -249,9 +250,9 @@
         <div class="col-lg-3 col-md-6 mb-5">
           <div class="card">
             <div class="card-body">
-              <img src="img/person1.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="img/person1.jpg" alt="author-1" class="img-fluid rounded-circle w-50 mb-3">
               <h3>Gina Carano</h3>
-              <h5 class="text-muted">Front End Developer</h5>
+              <h5>Front End Developer</h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -279,9 +280,9 @@
         <div class="col-lg-3 col-md-6 mb-5">
           <div class="card">
             <div class="card-body">
-              <img src="img/person2.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="img/person2.jpg" alt="author-2" class="img-fluid rounded-circle w-50 mb-3">
               <h3>Kaitlyn Dever</h3>
-              <h5 class="text-muted">Back End Developer</h5>
+              <h5>Back End Developer</h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -309,9 +310,9 @@
         <div class="col-lg-3 col-md-6 mb-5">
           <div class="card">
             <div class="card-body">
-              <img src="img/person3.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="img/person3.jpg" alt="author-3" class="img-fluid rounded-circle w-50 mb-3">
               <h3>Chris Pratt</h3>
-              <h5 class="text-muted">Full Stack Developer</h5>
+              <h5>Full Stack Developer</h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -340,9 +341,9 @@
         <div class="col-lg-3 col-md-6 mb-5">
           <div class="card">
             <div class="card-body">
-              <img src="img/person4.jpg" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="img/person4.jpg" alt="author-4" class="img-fluid rounded-circle w-50 mb-3">
               <h3>Bradley Cooper</h3>
-              <h5 class="text-muted">Web Designer</h5>
+              <h5>Web Designer</h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam!</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
