added class to the hero section heading for mobile view (325px)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 text-center">
-          <h1 class="display-2 mt-4 pt-4">Do what you dream of ...</h1>
+          <h1 class="display-2 mt-4 pt-4 hero-heading">Do what you dream of ...</h1>
           <blockquote class="blockquote mt-3 mb-3">"Never underestimate the determination of a kid who is time-rich and
             cash-poor"</blockquote>
           <footer class="blockquote-footer mt-3 mb-3">Cory Doctorow <cite title="Source Title">Little Brother</cite>
